added background image

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,8 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #5399df;
+  background-image: url(./images/background.jpg);
+  background-position-x: center;
 }
 
 .wrapper {
